Index items correct on mobile

--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -14,9 +14,16 @@ p {
   color: #2A2A2A;
 }
 
+img {
+  width: 100%;
+  height: auto;
+}
+
 header {
   height: 75px;
   background:#43E895;
+  display: flex;
+  justify-content: center;
 }
 
 h1, h2, h3 {
@@ -42,13 +49,27 @@ h3 {
   justify-content: space-between;
   align-items: center;
   padding: 25px 12px 0 12px;
+  width: 100%;
+  max-width: 900px;
+}
+
+.main-container {
+  max-width: 900px;
 }
 
 .map-icon {
-  background-image: url("./images/icon_map@2x.png");
   width: 40px;
   height: 40px;
   background-size: contain;
+}
+
+.back-icon {
+  max-width: 15px;
+  background-size: contain;
+}
+
+.back-icon:hover {
+  cursor: pointer;
 }
 
 .dummy-icon {
@@ -56,26 +77,26 @@ h3 {
   height: 50px;
 }
 
-#back-icon {
-  background-image: url("./images/ic_webBack@2x.png");
-  width: 25px;
-  height: 25px;
-  background-size: contain;
-  background-repeat: no-repeat;
+.restaurant-index-item .top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
-#back-icon:hover {
-  cursor: pointer;
+.bottom {
+
 }
 
 .restaurant-index-item {
   width: 100%;
-  height: 180px;
-  background-repeat: no-repeat;
-  background-size: contain;
+  max-width: 600px;
+  min-height: 180px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  position: relative;
+  overflow: auto;
 }
 
 .restaurant-index-item:hover {
@@ -84,6 +105,8 @@ h3 {
 
 .restaurant-index-item-text {
   padding: 0 0 6px 12px;
+  position: absolute;
+  z-index: 2;
 }
 
 .drawer {
@@ -95,6 +118,7 @@ h3 {
 #map-container {
   height: 160px;
 }
+
 #map {
   height: 100%;
 }
